# assit

P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/: app_build.sh
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/: Makefile  sample_link.ini  vivado.jou  vivado_55551.backup.jou
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/_x/: v++_package_dpu_guidance.pb3
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/_x/reports/package/: v++_package_dpu_guidance.html
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/binary_container_1/: binary_container_1.xclbin.info  binary_container_1.xclbin.link_summary  dpu.xclbin.package_summary  dpu.xo  v++_link_binary_container_1_guidance.pb3  xilinx_zcu102_base_202210_1.bif
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/binary_container_1/link/: link.spr
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/binary_container_1/logs/: optraceViewer.html
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/config_file/: prj_config
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/build_flow/DPUCZDX8G_zcu102/tmp_kernel_pack_DPUCZDX8G_hw_zcu102/: kernel_pack.xpr
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/linux/: testing.sh  testing2.sh
P4P-CapsuleNetworkAccelerator/accel/app/CapsuleNetwork/op_registration/cpp/op_SquashLayer/: CMakeLists.txt  Makefile
(+379 files in other folders)
